fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   padding-bottom: 5vmin;
 }
 
-.text {
+.text-content {
   font-size: calc(10px + 1vmin);
 }
 
